--- a/index.html
+++ b/index.html
@@ -272,6 +272,20 @@ body{
         <p>office@company.ro</p>
 
 
+ </div>
+      <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+
+       <img src="email.svg" alt="email" height="30" >
+        </div>
+<!--
+        <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
+        -->
+        <p><a href="https://matchit.company/">Facebook</a></p>
+
+
+
+        
 <!--
         <a href="#" class="icon-link">
           Call to action
