--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ body{
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
 
-       <img src="email.svg" alt="email" height="30" >
+       <img src="facebook.svg" alt="email" height="30" >
         </div>
 <!--
         <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
