--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@ body{
         <p class="col-lg-8 mx-auto lead">
           "O companie pe gustul meu"
         </p>
+
+        <h2 class="text-body-emphasis">Testimonial</h2>
+        <br />
+        <br/>
+        <img class="profile-img" src="circle-foto.png" alt="circle"
+<br />
+        <p class="col-lg-8 mx-auto lead">
+          "O companie pe gustul meu"
+        </p>
       </div>
     </div>
   </div>
