--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body{
       </div>
       <div class="overflow-hidden" style="max-height: 60vh;">
         <div class="container px-5">
-          <img src="logo.jpg" class=" img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="220" height="220" loading="lazy">
+          <img src="logo.jpg" class=" img-fluid border rounded-3 shadow-lg mb-4" alt="logo" width="220" height="220" loading="lazy">
 
         </div>
       </div>
