--- a/index.html
+++ b/index.html
@@ -40,6 +40,48 @@ body{
 <br/>
   <br/>
 
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">SweetCo.</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="#" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#produse">Produse</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Evenimente
+            </a>
+
+
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#evenimente">Corporate</a></li>
+              <li><a class="dropdown-item" href="#evenimente">Takeaway</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#evenimente">Evenimente private</a></li>
+            </ul>
+
+
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+
+
+      </div>
+    </div>
+  </nav>
+
+
+
+  
   <div class="px-4 pt-5 my-2 text-center border-bottom">
       <h1 class="display-4 fw-bold text-body-emphasis">SweetCo.</h1>
       <div class="col-lg-6 mx-auto">
@@ -114,7 +156,7 @@ body{
 <br />
 <br />
 <div class="container">
-
+<section id="produse">
 <br/>
   <br/>
 
@@ -156,10 +198,13 @@ body{
 
 </div>
 
-
+</section>
 <br />
+
+  <section id="evenimente">
 <div class="container px-4 py-5" id="featured-3">
-    <h2 class="pb-2 border-bottom">Evenimente | Clienti</h2>
+  
+  <h2 class="pb-2 border-bottom">Evenimente | Clienti</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
@@ -205,6 +250,7 @@ body{
       -->
 
       </div>
+      </section>
     </div>
   </div>
 
@@ -241,7 +287,7 @@ body{
 
 </section>
 
-
+<section id="contact">
 <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 border-bottom">CONTACT</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -296,9 +342,6 @@ body{
         -->
         <p><a href="https://matchit.company/">Facebook</a></p>
 
-
-
-        
 <!--
         <a href="#" class="icon-link">
           Call to action
@@ -308,6 +351,7 @@ body{
 
       </div>
 
+    </section>
     </div>
 
   </div>
