--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@ body{
         <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
         -->
         <p>office@company.ro</p>
+        <p>corporate@company.ro</p>
 
 
  </div>
