--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ body{
           <img src="home.svg" alt="home" height="30">
         </div>
 
-        <p>Blv.Ion Ion 11 | Cluj</p>
+        <p>Blv.Ion Ion 11 | Cluj-Napoca</p>
 
 <!--
         <a href="#" class="icon-link">
