--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="#" href="#">Home</a>
+            <a class="nav-link active" aria-current="#home" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#produse">Produse</a>
