--- a/index.html
+++ b/index.html
@@ -267,11 +267,10 @@ backgroud-color: #FAF7F0;
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
         <h2 class="text-body-emphasis">Testimonial</h2>
-        <br />
-        <br/>
-        <img class="profile-img" src="circle-foto.png" alt="circle"
+        
+        <img class="profile-img mt-5" src="circle-foto.png" alt="circle"
 <br />
-        <p class="col-lg-8 mx-auto lead">
+        <p class="col-lg-8 mx-auto lead mt-2">
           "O companie pe gustul meu"
         </p>
 <!--
