--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@ backgroud-color: #FAF7F0;
 </section>
 
 
-
+<section id="footer" class="gradient-background" >
 
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
     <div class="col-md-28 ">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        
       </a>
       <span class="mb-3 mb-md-0 text-body-secondary">© 2024 SweetCo | <a href="https://matchit.company/politica-de-confidentialitate"> Politica de confidentialitate</a> | Powered by matchit.company | Misiunea noastra este sa construim comunitati de business la care sa aiba acces orice companie - <a href="https://matchit.company/"> Connecting business</a></span>
 
@@ -397,7 +397,7 @@ d-flex align-items-center
     </ul>
   </footer>
 </div>
-
+</section>
   
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
