--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ backgroud-color: #FAF7F0;
 </section>
 
 
-<section id="footer" class="gradient-background" >
+<section id="footer" background-white " >
 
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
