--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@ backgroud-color: #FAF7F0;
 </section>
 
 
-<section id="footer" background-white " >
+<section id="footer">
 
-<div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
+<div class="container-fluid">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
     <div class="col-md-28 ">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
         
