--- a/index.html
+++ b/index.html
@@ -267,26 +267,17 @@ backgroud-color: #FAF7F0;
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
         <h2 class="text-body-emphasis">Testimonial</h2>
-        
-        <img class="profile-img mt-4" src="circle-foto.png" alt="circle"
-
-        <p class="col-lg-8 mx-auto lead mt-2">
+        <br />
+        <img class="profile-img" src="circle-foto.png" alt="circle"
+<br />
+        <p class="col-lg-8 mx-auto lead">
           "O companie pe gustul meu"
         </p>
 
 
 
 
-         <div class="my-5">
-    <div class="p-5 text-center bg-body-tertiary">
-      <div class="container py-5">
-        <h2 class="text-body-emphasis">Testimonial</h2>
         
-        <img class="profile-img mt-4" src="circle-foto.png" alt="circle"
-
-        <p class="col-lg-8 mx-auto lead mt-2">
-          "O companie pe gustul meu"
-        </p>
 <!--
         <h2 class="text-body-emphasis">Testimonial</h2>
         <br />
