--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ backgroud-color: #FAF7F0;
   <h2 class="pb-2 border-bottom">Evenimente | Clienti</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-3">
           <img src="corporate.svg" alt="back" height="30" >
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente corporate</h3>
@@ -222,7 +222,7 @@ backgroud-color: #FAF7F0;
       -->
       </div>
       <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-3">
           <img src="bag.svg" alt="app-indicator" height="30">
         </div>
         <h3 class="fs-2 text-body-emphasis">Takeaway</h3>
