--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ backgroud-color: #FAF7F0;
 <section id="footer">
 
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center text-bg-primary py-3 my-4 border-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-28 ">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
         
