--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ backgroud-color: #FAF7F0;
 <!--
         <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
         -->
-        <p><a href="https://matchit.company/">Facebook</a></p>
+        <p><a href="https://www.facebook.com/profile.php?id=1474142748">Facebook</a></p>
 
 <!--
         <a href="#" class="icon-link">
