--- a/index.html
+++ b/index.html
@@ -263,7 +263,13 @@ backgroud-color: #FAF7F0;
 
 </section>
 
+  <!--
   <div class="my-5">
+-->
+  
+    <div class="container px-4 py-5" id="featured-3">
+
+      
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
         <h2 class="text-body-emphasis">Testimonial</h2>
