--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ backgroud-color: #FAF7F0;
   <div class="my-5">
 -->
   
-    <div class="container px-4 py-5" id="featured-3">
+     <div class="feature col">
 
       
     <div class="p-5 text-center bg-body-tertiary">
