--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@ backgroud-color: #FAF7F0;
   <div class="my-5">
 -->
   
-    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-2">
+      <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-2">
+
 
       
     <div class="p-5 text-center bg-body-tertiary">
