--- a/index.html
+++ b/index.html
@@ -268,10 +268,12 @@ backgroud-color: #FAF7F0;
       <div class="container py-5">
         <h2 class="text-body-emphasis">Testimonial</h2>
         <br />
-        <img class="profile-img" src="circle-foto.png" alt="circle"
-<br />
+        <img class="profile-img" src="circle-foto.png" alt="circle">
+<!--
+          <br />
+  -->      
         <p class="col-lg-8 mx-auto lead">
-          "O companie pe gustul meu"
+          "O companie pe gustul meu. Produse din ingrediente atent alese"
         </p>
 
 <!--   
