--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@ backgroud-color: #FAF7F0;
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="c3.jpg" class="d-block w-100" alt="c3" height="50%" width="300">
+      <img src="c3.jpg" class="d-block w-100" alt="c3" height="500" width="300">
     </div>
     <div class="carousel-item active">
-      <img src="c5.jpg" class="d-block w-100" alt="c5" height="100%" width="300">
+      <img src="c5.jpg" class="d-block w-100" alt="c5" height="500" width="300">
     </div>
 
     <div class="carousel-item">
