--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@ backgroud-color: #FAF7F0;
         </ul>
 
 
+
+  </li>
+          <li class="nav-item">
+           <img src="facebook.svg" alt="back" height="30" <a class="nav-link" href="https://www.facebook.com/profile.php?id=1474142748"></a>
+         
+      </li>
+        </ul>
+
+
+        
       </div>
     </div>
   </nav>
