--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ backgroud-color: #FAF7F0;
 
   </li>
           <li class="nav-item">
-           <img src="facebook.svg" alt="back" height="30" <a class="nav-link" href="https://www.facebook.com/profile.php?id=1474142748"></a>
+           <img src="facebook.svg" alt="back" height="30"><a class="nav-link" href="https://www.facebook.com/profile.php?id=1474142748"></a>
          
       </li>
         </ul>
