--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@ backgroud-color: #FAF7F0;
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="c3.jpg" class="d-block w-100" alt="c3" height: auto; width="300">
+      <img src="c3.jpg" class="d-block w-100" alt="c3" height="500" width="300">
     </div>
     <div class="carousel-item active">
-      <img src="c5.jpg" class="d-block w-100" alt="c5" height: auto; width="300">
+      <img src="c5.jpg" class="d-block w-100" alt="c5" height="500" width="300">
     </div>
 
     <div class="carousel-item">
-      <img src="c6.jpg" class="d-block w-100" alt="c6" height: auto; width="300">
+      <img src="c6.jpg" class="d-block w-100" alt="c6" height="500" width="300">
     </div>
     <div class="carousel-item">
       <img src="c8.jpg" class="d-block w-100" alt="c8" height="500" width="300">
