--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ backgroud-color: #FAF7F0;
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
 
-       <img src="facebook.svg" alt="email" height="30" ><a href="https://www.facebook.com/profile.php?id=1474142748">Facebook</a>
+       <img src="facebook.svg" alt="email" height="30" ><a href="https://www.facebook.com/profile.php?id=1474142748"></a>
         </div>
 <!--
         <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
