--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ backgroud-color: #FAF7F0;
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
-          <img src="phone.svg" alt="phone" height="30" >
+          <img src="phone.svg" img-outline-secondary alt="phone" height="30" >
         </div>
 
         <p> (+40)722xxxxxx</p>
@@ -318,7 +318,7 @@ backgroud-color: #FAF7F0;
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
-          <img src="home.svg" alt="home" height="30">
+          <img src="home.svg" alt="home" img-outline-secondary height="30">
         </div>
 
         <p>Blv.Ion Ion 11 | Cluj-Napoca</p>
@@ -334,7 +334,7 @@ backgroud-color: #FAF7F0;
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
 
-       <img src="email.svg" alt="email" height="30" >
+       <img src="email.svg" alt="email" img-outline-secondary height="30" >
         </div>
 <!--
         <h3 class="fs-2 text-body-emphasis">Scrieti-ne</h3>
