--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente corporate</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="">Detalii...</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
 
         
         <!--
@@ -232,7 +232,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Takeaway</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="">Detalii...</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
 <!--
         <a href="#" class="icon-link">
           Call to action
@@ -248,7 +248,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente private</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="">Detalii...</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
 <!--
         <a href="#" class="icon-link">
           Call to action
