--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ backgroud-color: #FAF7F0;
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
-          <img src="home.svg" alt="home" svg-outline-secondary height="30">
+          <img src="geo-alt.svg" alt="home" svg-outline-secondary height="30">
         </div>
 
         <p>Blv.Ion Ion 11 | Cluj-Napoca</p>
