--- a/index.html
+++ b/index.html
@@ -212,7 +212,12 @@ backgroud-color: #FAF7F0;
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-2">
+         <img src="logo.jpg" class=" img-fluid border rounded-3 shadow-lg mb-4" alt="logo" width="220" height="220" loading="lazy">
+
+          <!--
           <img src="corporate.svg" alt="back" height="30" >
+
+          -->
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente corporate</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
