--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@ backgroud-color: #FAF7F0;
     <div class="container px-4 py-5" id="featured-3">
         <h2 class="pb-2 border-bottom">Servicii</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-              <img src="back.svg" alt="back" height="30" >
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
+              <img src="cake.svg" alt="back" height="30" >
             </div>
             <h3 class="fs-2 text-body-emphasis">Featured title</h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
@@ -123,8 +124,8 @@ backgroud-color: #FAF7F0;
 
           </div>
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-              <img src="app-indicator.svg" alt="app-indicator" height="30">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center  bg-gradient fs-2 mb-3">
+              <img src="cake.svg" alt="app-indicator" height="30">
             </div>
             <h3 class="fs-2 text-body-emphasis">Featured title</h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
