--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ backgroud-color: #FAF7F0;
           
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-              <img src="cake.svg" alt="back" height="30" >
+              <img src="cake2.svg" alt="back" height="30" >
             </div>
             <h3 class="fs-2 text-body-emphasis">Featured title</h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
@@ -125,7 +125,7 @@ backgroud-color: #FAF7F0;
           </div>
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center  bg-gradient fs-2 mb-3">
-              <img src="cake.svg" alt="app-indicator" height="30">
+              <img src="cake2.svg" alt="app-indicator" height="30">
             </div>
             <h3 class="fs-2 text-body-emphasis">Featured title</h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
