--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ backgroud-color: #FAF7F0;
           <img src="corporate.svg" alt="back" height="30" >
           
         </div>
-        <h3 class="fs-2 text-body-emphasis">Evenimente corporate</h3>
-        <p>Dacă ai o petrecere, aniversare, botez, nuntă sau eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată!  </p>
+        <h3 class="fs-2 text-body-emphasis">Corporate</h3>
+        <p>Dacă ai un eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată!  </p>
         <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
 
         
@@ -259,7 +259,7 @@ backgroud-color: #FAF7F0;
        <img src="cake2.svg" alt="check" height="30" >
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente private</h3>
-        <p>Dacă ai o petrecere, aniversare, botez, nuntă sau eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată! </p>
+        <p>Dacă ai o petrecere, aniversare, botez sau nuntă ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată! </p>
         <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
 <!--
         <a href="#" class="icon-link">
