--- a/index.html
+++ b/index.html
@@ -243,8 +243,13 @@ backgroud-color: #FAF7F0;
           <img src="bag.svg" alt="app-indicator" height="30">
         </div>
         <h3 class="fs-2 text-body-emphasis">Takeaway</h3>
+
+        <p>Daca ti-e pofta de prajiturile noastre si vrei sa le degusti la birou sau la tine acasa, le poti avea printr-un simplu click.</p>
+        <!--
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Detalii...</a></button>
+        -->
+        
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="#evenimente">Comanda</a></button>
 <!--
         <a href="#" class="icon-link">
           Call to action
