--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ backgroud-color: #FAF7F0;
   
 <br />
 <br />
-<div class="container">
+
+  <div class="container">
 <section id="produse">
 <br/>
   <br/>
@@ -189,18 +190,21 @@ backgroud-color: #FAF7F0;
     <div class="carousel-item active">
       <img src="c3.jpg" class="d-block w-100" alt="c3" height="500" width="300">
     </div>
-    <div class="carousel-item active">
+   
+    <div class="carousel-item">
       <img src="c5.jpg" class="d-block w-100" alt="c5" height="500" width="300">
     </div>
 
     <div class="carousel-item">
       <img src="c6.jpg" class="d-block w-100" alt="c6" height="500" width="300">
     </div>
+    
     <div class="carousel-item">
       <img src="c8.jpg" class="d-block w-100" alt="c8" height="500" width="300">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+ 
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
