--- a/index.html
+++ b/index.html
@@ -253,13 +253,15 @@ backgroud-color: #FAF7F0;
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         -->
         
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company"><img src="email.svg" alt="email" height="25">Comanda</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company">Comanda</a></button>
 
 <!--
         <a href="#" class="icon-link">
           Call to action
           <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
         </a>
+
+       <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company"><img src="email.svg" alt="email" height="25">Comanda</a></button>
 
       -->
       </div>
