--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ backgroud-color: #FAF7F0;
   <br/>
 
   
-  <div class="px-4 pt-5 my-2 text-center border-bottom">
+  <div class="px-4 pt-5 my-2 text-justify border-bottom">
       <h1 class="display-4 fw-bold text-body-emphasis">SweetCo.</h1>
       <div class="col-lg-9 mx-auto">
 
