--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ backgroud-color: #FAF7F0;
   <br/>
 
   
-  <div class="px-4 pt-5 my-2 text-center border-bottom">
-      <h1 class="display-4 fw-bold text-justify text-body-emphasis">SweetCo.</h1>
+  <div class="px-4 pt-5 my-2  border-bottom">
+      <h1 class="display-4 fw-bold text-center text-body-emphasis">SweetCo.</h1>
       <div class="col-lg-9 mx-auto">
 
  
@@ -103,7 +103,7 @@ backgroud-color: #FAF7F0;
 -->
         </div>
       </div>
-      <div class="overflow-hidden" style="max-height: 60vh;">
+      <div class="overflow-hidden" text-center style="max-height: 60vh;">
         <div class="container px-5">
           <img src="logo.jpg" class=" img-fluid border rounded-3 shadow-lg mb-4" alt="logo" width="220" height="220" loading="lazy">
 
