--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ backgroud-color: #FAF7F0;
 -->
         </div>
       </div>
-      <div class="overflow-hidden" text-center style="max-height: 60vh;">
-        <div class="container px-5">
+      <div class="overflow-hidden"  style="max-height: 60vh;">
+        <div class="container text-center px-5">
           <img src="logo.jpg" class=" img-fluid border rounded-3 shadow-lg mb-4" alt="logo" width="220" height="220" loading="lazy">
 
         </div>
