--- a/index.html
+++ b/index.html
@@ -340,6 +340,138 @@ backgroud-color: #FAF7F0;
 
 </section>
 
+
+
+
+
+<!--
+AICI CARUSERL rounded MARKETING CONTAINER
+<div class="p-5 text-center bg-body-tertiary">
+  -->
+<div class="container-fluid">
+<div class="p-5 text-center rounded-4 bg-body-tertiary">
+
+
+
+<h2 class="pb-2 text-center">Testimoniale</h2>
+    <!-- Three columns of text below the carousel     -->
+    <div class="row">
+      <div class="col-lg-4">
+<!--
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)" ><img class="profile-img" src="circle-foto.png" alt="circle"></rect></svg>
+-->
+
+
+<br />
+<br/>
+
+<!--
+<img src="c5.jpg" class="d-block border rounded-4 w-100" alt="c5" height="160" width="40">
+
+<img class="profile-img" src="c6.jpg" alt="circle" />
+-->
+<img class="profile-img" src="w2.png" alt="circle" />
+
+        <h2 class="fw-normal">Patricia Kane</h2>
+        <p>Delicioase! Cele mai bune prajituri ever. Recomand.</p>
+<!--
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+-->
+      </div><!-- /.col-lg-4 -->
+
+
+      <div class="col-lg-4">
+
+        <br />
+        <br/>
+
+<!--
+        <img src="c6.jpg" class="d-block border rounded-4 w-100" alt="c5" height="160" width="40">
+
+        <img class="profile-img" src="circle-foto.png" alt="circle" />
+-->
+<img class="profile-img" src="men.png" alt="circle" />
+
+                <h2 class="fw-normal">Andy Smith</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+<!--
+                <p><a class="btn btn-secondary" href="#">View details »</a></p>
+-->
+              </div><!-- /.col-lg-4 -->
+
+              <div class="col-lg-4">
+
+
+
+
+
+<!--
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+-->
+<br />
+<br/>
+    <img class="profile-img" src="circle-foto.png" alt="circle" />
+        <h2 class="fw-normal">Virginia Wolf</h2>
+        <p>And lastly this, the third column of representative placeholder content.</p>
+<!--
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+-->
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+    <!-- START THE FEATURETTES -->
+<!--
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
+        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
+        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+     /END THE FEATURETTES -->
+
+  </div>
+
+
+<br />
+<br />
+
+
+
+
+  
 <section id="contact">
 <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 border-bottom">CONTACT</h2>
