--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@ backgroud-color: #FAF7F0;
 
 </section>
 
+ <!-- 
 <section id="testimonial">
 
 </section>
@@ -315,7 +316,7 @@ backgroud-color: #FAF7F0;
 <br />
 
       
-        <!-- AICI AL DOILEA TESTIMONIAL -->
+        <!-- AICI AL DOILEA TESTIMONIAL --
 
       <!-- 
       <div class="container py-5 ">
@@ -330,8 +331,8 @@ backgroud-color: #FAF7F0;
           "O companie pe gustul meu"
         </p>
 
-   -->  
-<!-- PANA AICI-->
+   --  
+<!-- PANA AICI--
  
         
       </div>
@@ -340,7 +341,7 @@ backgroud-color: #FAF7F0;
 
 </section>
 
-
+-->
 
 
 
