--- a/index.html
+++ b/index.html
@@ -509,10 +509,13 @@ AICI CARUSERL rounded MARKETING CONTAINER
     </div>
 
   </div>
-
-
 </section>
 
+<br />
+  <div class="text-center">
+
+<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#" class="text-body-emphasis text-sm">Back to top</a></button>
+</div>
 
 <section id="footer">
 
