--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <img class="profile-img" src="w2.png" alt="circle" />
 
         <h2 class="fw-normal">Patricia Kane</h2>
-        <p>Delicioase! Cele mai bune prajituri ever. Recomand.</p>
+        <p>Delicioase! Cele mai bune prajituri ever. Recomand ♥️</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
 -->
