--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ backgroud-color: #FAF7F0;
 AICI CARUSERL rounded MARKETING CONTAINER
 <div class="p-5 text-center bg-body-tertiary">
   -->
-<div class="container-fluid">
+<div class="container">
 <div class="p-5 text-center rounded-4 bg-body-tertiary">
 
 
