--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
       -->
       </div>
       <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient btn-outline-secondary fs-2 mb-1">
           <img src="geo-alt.svg" alt="home" svg-outline-secondary height="25">
         </div>
 
