--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
         </a>
       -->
       </div>
-      <div class="feature col">
+      <div class="feature col outline-secondary">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient  fs-2 mb-1">
           <img src="geo-alt.svg" alt="home" svg-outline-secondary height="25">
         </div>
