--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
       </div>
       <div class="feature col outline-secondary">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient  fs-2 mb-1">
-          <button type="button" class="btn btn-sm btn-outline-secondary"><a href=""><img src="geo-alt.svg" alt="adresa" height="25"></a></button>
+          <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://maps.app.goo.gl/BMxbo4uh7HeMvcXU8?g_st=com.google.maps.preview.copy"><img src="geo-alt.svg" alt="adresa" height="25"></a></button>
         </div>
 
         <p>Blv.Ion Ion 11 | Cluj-Napoca</p>
