--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
           <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://maps.app.goo.gl/BMxbo4uh7HeMvcXU8?g_st=com.google.maps.preview.copy"><img src="geo-alt.svg" alt="adresa" height="25"></a></button>
         </div>
 
-        <p>Blv.Ion Ion 11 | Cluj-Napoca</p>
+        <p>Strada Decebal 13 | Cluj-Napoca</p>
 
 <!--
         <a href="#" class="icon-link">
