--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 
 <img class="profile-img" src="w2.png" alt="circle" />
 
-        <h2 class="fw-normal">Patricia Kane</h2>
+        <h2 class="fw-normal">Patricia Ruse</h2>
         <p>Delicioase! Cele mai bune prajituri ever. Recomand ❤️</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
@@ -388,8 +388,8 @@ AICI CARUSERL rounded MARKETING CONTAINER
 -->
 <img class="profile-img" src="men.png" alt="circle" />
 
-                <h2 class="fw-normal">Andy Smith</h2>
-                <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+                <h2 class="fw-normal">Andy Shumman</h2>
+                <p>Wow! Super gustoase.</p>
 <!--
                 <p><a class="btn btn-secondary" href="#">View details »</a></p>
 -->
@@ -407,8 +407,8 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <br />
 <br/>
     <img class="profile-img" src="circle-foto.png" alt="circle" />
-        <h2 class="fw-normal">Virginia Wolf</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <h2 class="fw-normal">Virginia Stanca</h2>
+        <p>Un gust de poveste. Delicios!</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
 -->
