--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <br/>
     <img class="profile-img" src="circle-foto.png" alt="circle" />
         <h2 class="fw-normal">Virginia Stanca</h2>
-        <p>Un gust de poveste. Delicios!</p>
+        <p>Un gust de poveste. Totul la superlativ.</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
 -->
