--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ backgroud-color: #FAF7F0;
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         -->
         
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company">Comanda</a></button>
+        <button type="button" class="btn btn-sm bg-text-light btn-outline-secondary"><a href="mailto:alex@matchit.company">Comanda</a></button>
 
 <!--
         <a href="#" class="icon-link">
