--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
     <h2 class="pb-2 border-bottom">CONTACT</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
+        <div class="btn btn-outline-secondary feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
           <img src="phone.svg" svg-outline-secondary alt="phone" height="25" >
         </div>
 
