--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
-          <img class="btn btn-outline-secondary" src="phone.svg" svg-outline-secondary alt="phone" height="25" >
+          <img class="btn btn-lg btn-outline-secondary" src="phone.svg" svg-outline-secondary alt="phone" height="25" >
         </div>
 
         <p> (+40)722659514</p>
