--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <img class="profile-img" src="men.png" alt="circle" />
 
                 <h2 class="fw-normal">Andy Shumman</h2>
-                <p>Wow! Prajiturile au fost vedetele petrecerii.</p>
+                <p>Wow! Prajiturile au fost atractia petrecerii.</p>
 <!--
                 <p><a class="btn btn-secondary" href="#">View details »</a></p>
 -->
