--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Corporate</h3>
         <p>Dacă ai un eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată!  </p>
-        <button type="button" class="btn btn-primary text-bg-primary btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company">Comanda</a></button>
+        <button type="button" class="btn btn-light btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company">Comanda</a></button>
 
         
         <!--
