--- a/index.html
+++ b/index.html
@@ -437,8 +437,11 @@ AICI CARUSERL rounded MARKETING CONTAINER
           <img class="btn btn-outline-secondary" src="phone.svg" svg-outline-secondary alt="phone" height="35" >
         </div>
 
-        <p> (+40)786773747</p>
+<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#contact" class="text-body-emphasis text-sm">+40)786773747</a></button>
         
+        <!--
+        <p> (+40)786773747</p>
+        -->
 <!--
         <a href="#" class="icon-link">
           Call to action
