--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
           <img class="btn btn-outline-secondary" src="phone.svg" svg-outline-secondary alt="phone" height="35" >
         </div>
 
-<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#contact" class="text-body-emphasis text-sm">+40)786773747</a></button>
+<button type="button" class="btn btn-sm"><p href="#contact" class="text-body-emphasis text-sm">+40)786773747</p></button>
         
         <!--
         <p> (+40)786773747</p>
