--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Corporate</h3>
         <p>Dacă ai un eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată!  </p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-light">Comanda</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-dark">Comanda</a></button>
 
         
         <!--
@@ -255,7 +255,7 @@ backgroud-color: #FAF7F0;
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         -->
         
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-light">Comanda</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-dark">Comanda</a></button>
 
 <!--
         <a href="#" class="icon-link">
@@ -274,7 +274,7 @@ backgroud-color: #FAF7F0;
         </div>
         <h3 class="fs-2 text-body-emphasis">Evenimente private</h3>
         <p>Dacă ai o petrecere, aniversare, botez sau nuntă ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată! </p>
-        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-light">Comanda</a></button>
+        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-dark">Comanda</a></button>
 <!--
         <a href="#" class="icon-link">
           Call to action
