--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 
 <img class="profile-img" src="w2.png" alt="circle" />
 
-        <h2 class="fw-normal">Patricia Ruse</h2>
+        <h2 class="fw-normal text-body-secondary">Patricia Ruse</h2>
         <p>Delicioase! Cele mai bune prajituri ever. Recomand ❤️</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
@@ -388,7 +388,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 -->
 <img class="profile-img" src="men.png" alt="circle" />
 
-                <h2 class="fw-normal">Andy Shumman</h2>
+                <h2 class="mb-1 text-body-secondary fw-normal">Andy Shumman</h2>
                 <p>Wow! Prajiturile au fost atractia petrecerii.</p>
 <!--
                 <p><a class="btn btn-secondary" href="#">View details »</a></p>
@@ -407,7 +407,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <br />
 <br/>
     <img class="profile-img" src="circle-foto.png" alt="circle" />
-        <h2 class="fw-normal">Virginia Stanca</h2>
+        <h2 class="mb-1 text-body-secondary fw-normal">Virginia Stanca</h2>
         <p>Un gust de poveste. Totul la superlativ.</p>
 <!--
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
