--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ backgroud-color: #FAF7F0;
           <img src="corporate.svg" alt="back" height="30" >
           
         </div>
-        <h3 class="fs-2 text-body-secondary">Corporate</h3>
+        <h3 class="fs-2 text-body-emphasis">Corporate</h3>
         <p>Dacă ai un eveniment la firmă, ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată!  </p>
         <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-dark">Comanda</a></button>
 
@@ -248,7 +248,7 @@ backgroud-color: #FAF7F0;
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-2">
           <img src="bag.svg" alt="app-indicator" height="30">
         </div>
-        <h3 class="fs-2 text-body-secondary">Takeaway</h3>
+        <h3 class="fs-2 text-body-emphasis">Takeaway</h3>
 
         <p>Daca ti-e pofta de prajiturile noastre si vrei sa le degusti la birou sau la tine acasa, le poti avea printr-un simplu click.</p>
         <!--
@@ -272,7 +272,7 @@ backgroud-color: #FAF7F0;
 
        <img src="cake2.svg" alt="check" height="30" >
         </div>
-        <h3 class="fs-2 text-body-secondary">Evenimente private</h3>
+        <h3 class="fs-2 text-body-emphasis">Evenimente private</h3>
         <p>Dacă ai o petrecere, aniversare, botez sau nuntă ne poți contacta pentru a discuta cum anume te putem ajuta să ai prăjituri de care toată lumea să fie încântată! </p>
         <button type="button" class="btn btn-sm btn-outline-secondary"><a href="mailto:alex@matchit.company" class="link-dark">Comanda</a></button>
 
