--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <br />
   <div class="text-center">
 
-<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#" class="text-body-emphasis text-body-secondary text-sm">Back to top</a></button>
+<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#" class=" text-body-secondary text-sm">Back to top</a></button>
 </div>
 
 <section id="footer">
@@ -531,7 +531,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
       <span class="mb-3 mb-md-0 text-body-secondary">© 2024 SweetCo | <a href="https://matchit.company/politica-de-confidentialitate"> Politica de confidentialitate</a> | Powered by matchit.company | Misiunea noastra este sa construim comunitati de business la care sa aiba acces orice companie - <a href="https://matchit.company/"> Connecting business</a></span>
 
 <!--
-
+text-body-emphasis
 d-flex align-items-center
 
     </div>
