--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <br />
   <div class="text-center">
 
-<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#" class=" text-body-secondary text-sm">Back to top</a></button>
+<button type="button" class="btn btn-sm  btn-outline-secondary"><a href="#" class=" text-body-emphasis text-sm">Back to top</a></button>
 </div>
 
 <section id="footer">
