--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
 <section id="contact">
 <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 border-bottom">CONTACT</h2>
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-2 col-sm-3">
+    <div class="row g-2 py-5 row-cols-1 row-cols-lg-2 col-sm-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-black bg-gradient fs-2 mb-1">
           <img class="btn btn-outline-secondary" src="phone.svg" svg-outline-secondary alt="phone" height="35" >
@@ -452,7 +452,7 @@ AICI CARUSERL rounded MARKETING CONTAINER
           <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://maps.app.goo.gl/BMxbo4uh7HeMvcXU8?g_st=com.google.maps.preview.copy"><img src="geo-alt.svg" alt="adresa" height="25"></a></button>
         </div>
 
-        <p>Strada Decebal 13 | Cluj-Napoca</p>
+   <!--     <p>Strada Decebal 13 | Cluj-Napoca</p>   -->
 
 <!--
         <a href="#" class="icon-link">
