--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ backgroud-color: #FAF7F0;
   <h2 class="display-4 text-center text-body-emphasis">Produsele noastre</h2>
 <br />
 
-      <div id="carouselExampleIndicators" class="carousel slide">
+      <div id="carouselExampleIndicators" class="carousel slide mb-6" data-bs-ride="carusel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
