--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@ backgroud-color: #FAF7F0;
 
   </div>
   <div class="carousel-inner rounded-4">
-    <div class="carousel-item >
+    <div class="carousel-item active>
       <img src="c3.jpg" class="d-block border rounded-4 w-100" alt="c3" height="500" width="300">
     </div>
    
-    <div class="carousel-item active">
+    <div class="carousel-item ">
       <img src="c5.jpg" class="d-block border rounded-4 w-100" alt="c5" height="500" width="300">
     </div>
 
