--- a/index.html
+++ b/index.html
@@ -181,16 +181,15 @@ backgroud-color: #FAF7F0;
 
   <!-- carouselExampleIndicators -->
   
-      <div id="carouselExampleIndicators" class="carousel slide mb-6" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    
-
-  </div>
-  <div class="carousel-inner rounded-4">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button
+</div>
+ 
+        <div class="carousel-inner rounded-4">
     <div class="carousel-item active>
       <img src="c3.jpg" class="d-block border rounded-4 w-100" alt="c3" height="500" width="300">
     </div>
