--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ backgroud-color: #FAF7F0;
 <br />
 <br />
 
-  <div class="container px-4 py-5" id="featured-3">
+  <div class="container">
 <section id="produse">
 <br/>
   <br/>
