--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ backgroud-color: #FAF7F0;
 
   <!-- carouselExampleIndicators -->
   
-      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide mb-6" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
