--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ backgroud-color: #FAF7F0;
 <br />
 <br />
 
-  <div class="container px-4 py-5" id="featured-3"">
+  <div class="container>
 <section id="produse">
 <br/>
   <br/>
@@ -181,7 +181,7 @@ backgroud-color: #FAF7F0;
 
   <!-- carouselExampleIndicators -->
   
-      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
