--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ backgroud-color: #FAF7F0;
 <br />
 <br />
 
-  <div class="container>
+  <div class="container">
 <section id="produse">
 <br/>
   <br/>
@@ -179,34 +179,33 @@ backgroud-color: #FAF7F0;
   <h2 class="display-4 text-center text-body-emphasis">Produsele noastre</h2>
 <br />
 
-  <!-- carouselExampleIndicators -->
-  
-      <div id="carouselExampleIndicators" class="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button
-</div>
- 
-        <div class="carousel-inner rounded-4">
-    <div class="carousel-item active>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+
+
+  </div>
+  <div class="carousel-inner rounded-4">
+    <div class="carousel-item active">
       <img src="c3.jpg" class="d-block border rounded-4 w-100" alt="c3" height="500" width="300">
     </div>
-   
-    <div class="carousel-item ">
+
+    <div class="carousel-item">
       <img src="c5.jpg" class="d-block border rounded-4 w-100" alt="c5" height="500" width="300">
     </div>
 
     <div class="carousel-item">
       <img src="c6.jpg" class="d-block border rounded-4 w-100" alt="c6" height="500" width="300">
     </div>
-    
+
     <div class="carousel-item">
       <img src="c8.jpg" class="d-block border rounded-4 w-100" alt="c8" height="500" width="300">
     </div>
   </div>
- 
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
