--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ border-radius: .75rem;
 }
 
 body{
-  background-color:  #F19ED2;   /* #F3D0D7;  */
+  background-color: #FBA1B7;  /*  #F19ED2;  */ /* #F3D0D7;  */
 }
 footer{
 backgroud-color: #FAF7F0;
